src/objects/Client_Assignation__c.object
<CustomObject>
    <description>Junction object for many to many relationship between Contact and Mobile User objects</description>
    <fields>
        <fullName>Assignation__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Assignments</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mobile Users Assigned to this Contact</relationshipLabel>
        <relationshipName>Client_Assignations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mobile_User__c</fullName>
        <label>Mobile User</label>
        <referenceTo>Mobile_User__c</referenceTo>
        <relationshipLabel>Assigned Clients</relationshipLabel>
        <relationshipName>Client_Assignations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Client Assignment</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Client Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>